até parte 8 - finalização

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div>
-            <button>
+            <button onclick="reiniciar()">
                 Reiniciar
             </button>
         </div>
